package edu.fiuba.algo3.modelo;

public interface Defensa {

    public Credito getCosto();
}